Add master plan and website updates

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,17 @@
                 <nav>
                     <ul class="nav-links">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle">Services <i class="fas fa-chevron-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="real-estate.html">Real Estate</a></li>
+                                <li><a href="events-weddings.html">Events</a></li>
+                                <li><a href="construction.html">Construction</a></li>
+                                <li><a href="agriculture.html">Agriculture</a></li>
+                                <li><a href="infrastructure.html">Infrastructure</a></li>
+                                <li><a href="tourism.html">Tourism</a></li>
+                            </ul>
+                        </li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
                     <div class="hamburger">
@@ -44,7 +54,7 @@
                     </div>
                 </nav>
                 <div class="header-contact">
-                    <a href="contact.html" class="btn-98 active">Contact</a>
+                    <a href="portal.html" class="cta-button-main">Client Portal</a>
                 </div>
             </div>
         </div>
@@ -107,7 +117,7 @@
                             <div class="social-icons">
                                 <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                                 <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                                <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                                <a href="#" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
                     </div>
